--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
         python-version: '3.9'
         
     - name: Install python
-      run:  pip install -r requirement.txt
+      run:  pip install -r requirements.txt
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
