--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 19 * * MON-FRI'
 
 jobs:
   build:
